# cmdmaster-pro

./: .gitignore  LICENSE  README.md  ai_config.py  ai_config_example.py  pyproject.toml  setup.py
.github/workflows/: test.yml
cmdmaster/: __main__.py  api.py  cache.py  cli.py  completion.py  config.py  engines.py  explain.py  favorites.py  history.py  output.py  safety.py  templates.py  theme.py  utils.py
examples/: ai_config.example.py  templates.example.json
tests/: test_cmdmaster.py
