[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "cmdmaster-pro"
version = "0.4.0"
description = "Intelligent Operations Toolkit — AI-assisted shell command generation"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.6"
dependencies = [
    "requests>=2.25.0",
]

[project.scripts]
cmdmaster-pro = "cmdmaster.cli:main"

[tool.setuptools.packages.find]
include = ["cmdmaster*"]
